--- a/src/index.css
+++ b/src/index.css
@@ -42,6 +42,10 @@ html, body, #root {
     transition: all 0.5s ease-in-out;
 }
 
+p {
+  color: #d1cedd;
+}
+
 ul.footerSocial {
   list-style: none;
   padding-left: 0;
@@ -154,6 +158,15 @@ h1.orderStatus {
   margin-right: 20px;
   margin-bottom: 10px;
   display: inline-block;
+}
+
+.blogTitle {
+  margin-bottom: 20px;
+}
+
+.blogTitle h2 {
+  font-size: 19px;
+  color: #ffffff8c;
 }
 
 .aboutText p {
